avoid overflow of the event title is a very long word

--- a/public/css/vedst.css
+++ b/public/css/vedst.css
@@ -150,6 +150,7 @@ input[type=number],
     line-height: normal;
     justify-content: center;
     align-items: center;
+    word-break: break-all;
 
     padding: 0 5% 0 5%;
 
